refactor JwtTokenFilter